// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField should render correctly 1`] = `
<DocumentFragment>
  .css-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-od36vv {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.css-od36vv[aria-disabled='true'] {
  background: #f6f6f8;
}

.css-od36vv[aria-disabled='true']>.eiawj1g4,
.css-od36vv[aria-disabled='true'] .eiawj1g2,
.css-od36vv[aria-disabled='true'] .eiawj1g3 {
  background-color: #f6f6f8;
  border: none;
  color: #c4c9d6;
  opacity: 1;
  cursor: not-allowed;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:hover,
.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.css-bkq66r {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.css-bkq66r:hover:not([disabled]) {
  background: #eeeeff;
}

.css-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-1lq3jx2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-1lq3jx2::-webkit-outer-spin-button,
.css-1lq3jx2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-1mh6k42 {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.css-1mh6k42:hover:not([disabled]) {
  background: #eeeeff;
}

.css-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="css-kwbqjp e1sgck4o0"
    >
      <div
        aria-disabled="false"
        class="css-od36vv eiawj1g0"
      >
        <button
          aria-label="Minus"
          class="css-bkq66r eiawj1g4"
          disabled=""
          type="button"
        >
          <svg
            class="css-xmmyxm-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H5V11H19V13Z"
            />
          </svg>
        </button>
        <div
          aria-live="assertive"
          class="css-192mx7g eiawj1g3"
          role="status"
        >
          <input
            aria-label="Number Input"
            class="css-1lq3jx2 eiawj1g2"
            id=":r0:"
            name="test"
            style="width: 25px;"
            type="number"
            value="0"
          />
        </div>
        <button
          aria-label="Plus"
          class="css-1mh6k42 eiawj1g4"
          type="button"
        >
          <svg
            class="css-18ka304-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-od36vv {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.css-od36vv[aria-disabled='true'] {
  background: #f6f6f8;
}

.css-od36vv[aria-disabled='true']>.eiawj1g4,
.css-od36vv[aria-disabled='true'] .eiawj1g2,
.css-od36vv[aria-disabled='true'] .eiawj1g3 {
  background-color: #f6f6f8;
  border: none;
  color: #c4c9d6;
  opacity: 1;
  cursor: not-allowed;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:hover,
.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.css-bkq66r {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.css-bkq66r:hover:not([disabled]) {
  background: #eeeeff;
}

.css-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-1lq3jx2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-1lq3jx2::-webkit-outer-spin-button,
.css-1lq3jx2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<form
    novalidate=""
  >
    <div
      class="css-kwbqjp e1sgck4o0"
    >
      <div
        aria-disabled="true"
        class="css-od36vv eiawj1g0"
      >
        <button
          aria-label="Minus"
          class="css-bkq66r eiawj1g4"
          disabled=""
          type="button"
        >
          <svg
            class="css-xmmyxm-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H5V11H19V13Z"
            />
          </svg>
        </button>
        <div
          aria-live="assertive"
          class="css-192mx7g eiawj1g3"
          role="status"
        >
          <input
            aria-label="Number Input"
            class="css-1lq3jx2 eiawj1g2"
            disabled=""
            id=":r3:"
            name="test"
            style="width: 25px;"
            type="number"
            value="0"
          />
        </div>
        <button
          aria-label="Plus"
          class="css-bkq66r eiawj1g4"
          disabled=""
          type="button"
        >
          <svg
            class="css-xmmyxm-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .css-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-od36vv {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.css-od36vv[aria-disabled='true'] {
  background: #f6f6f8;
}

.css-od36vv[aria-disabled='true']>.eiawj1g4,
.css-od36vv[aria-disabled='true'] .eiawj1g2,
.css-od36vv[aria-disabled='true'] .eiawj1g3 {
  background-color: #f6f6f8;
  border: none;
  color: #c4c9d6;
  opacity: 1;
  cursor: not-allowed;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:hover,
.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.css-1mh6k42 {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.css-1mh6k42:hover:not([disabled]) {
  background: #eeeeff;
}

.css-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-1lq3jx2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-1lq3jx2::-webkit-outer-spin-button,
.css-1lq3jx2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-bkq66r {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #c4c9d6;
  padding: 0;
  margin: 0 8px;
}

.css-bkq66r:hover:not([disabled]) {
  background: #eeeeff;
}

.css-xmmyxm-sizeStyles {
  vertical-align: middle;
  fill: #bda5df;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="css-kwbqjp e1sgck4o0"
    >
      <div
        aria-disabled="false"
        class="css-od36vv eiawj1g0"
      >
        <button
          aria-label="Minus"
          class="css-1mh6k42 eiawj1g4"
          type="button"
        >
          <svg
            class="css-18ka304-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H5V11H19V13Z"
            />
          </svg>
        </button>
        <div
          aria-live="assertive"
          class="css-192mx7g eiawj1g3"
          role="status"
        >
          <input
            aria-label="Number Input"
            class="css-1lq3jx2 eiawj1g2"
            id=":r9:"
            name="test"
            style="width: 35px;"
            type="number"
            value="20"
          />
        </div>
        <button
          aria-label="Plus"
          class="css-bkq66r eiawj1g4"
          disabled=""
          type="button"
        >
          <svg
            class="css-xmmyxm-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger events correctly 1`] = `
<DocumentFragment>
  .css-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-od36vv {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.css-od36vv[aria-disabled='true'] {
  background: #f6f6f8;
}

.css-od36vv[aria-disabled='true']>.eiawj1g4,
.css-od36vv[aria-disabled='true'] .eiawj1g2,
.css-od36vv[aria-disabled='true'] .eiawj1g3 {
  background-color: #f6f6f8;
  border: none;
  color: #c4c9d6;
  opacity: 1;
  cursor: not-allowed;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:hover,
.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus {
  border: 1px solid #4f0599;
}

.css-od36vv:not([aria-disabled='true']) .eiawj1g3:focus-within {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border: 1px solid #4f0599;
}

.css-1mh6k42 {
  cursor: pointer;
  background: none;
  border: 0;
  border-radius: 4px;
  color: #4f0599;
  padding: 0;
  margin: 0 8px;
}

.css-1mh6k42:hover:not([disabled]) {
  background: #eeeeff;
}

.css-18ka304-sizeStyles {
  vertical-align: middle;
  fill: #390171;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.css-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.css-1lq3jx2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.css-1lq3jx2::-webkit-outer-spin-button,
.css-1lq3jx2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<form
    novalidate=""
  >
    <div
      class="css-kwbqjp e1sgck4o0"
    >
      <div
        aria-disabled="false"
        class="css-od36vv eiawj1g0"
      >
        <button
          aria-label="Minus"
          class="css-1mh6k42 eiawj1g4"
          type="button"
        >
          <svg
            class="css-18ka304-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H5V11H19V13Z"
            />
          </svg>
        </button>
        <div
          aria-live="assertive"
          class="css-192mx7g eiawj1g3"
          role="status"
        >
          <input
            aria-label="Number Input"
            class="css-1lq3jx2 eiawj1g2"
            id=":r6:"
            name="test"
            style="width: 35px;"
            type="number"
            value="10"
          />
        </div>
        <button
          aria-label="Plus"
          class="css-1mh6k42 eiawj1g4"
          type="button"
        >
          <svg
            class="css-18ka304-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
